# autocuidado

./: .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: frontend.yaml
backend/: dockerfile  manage.py  pyproject.toml
backend/autocuidado/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/core/: views.py
backend/vivaboavista/: api.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.cjs  components.json  dockerfile  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/app/: root.tsx
frontend/app/components/ui/: button.tsx
frontend/app/routes/: _index.tsx
frontend/src/: root.tsx
frontend/src/styles/: root.css
