[tool.poetry]
name = "vivaboavista"
version = "0.0.0"
description = ""
authors = ["joaoprocopio <joaovitorcprocopio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
